examples/test/testpolicy15414.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15414
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key13: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value16
          key29: value34
          key47: value27
      podSelector:
        matchLabels:
          key23: value14
